# mindmap-generator

./: .env  .gitignore  README.md  emoji_cache.json  fitch.md  main.py  mindmap_generator.py  pyproject.toml  requirements.txt  sample_input_document_as_markdown__durnovo_memo.md  sample_input_document_as_markdown__small.md
mindmap_generator/: config.py  document_optimizer.py  llm_client.py  mindmap_generator.py  models.py  prompt_strategy.py  token_usage.py  utils.py
mindmap_outputs/: fitch_mindmap__deepseek.html  fitch_mindmap__deepseek.txt  fitch_mindmap_outline__deepseek.md  sample_input_document_as_markdown__durnovo_memo_mindmap__anthropic.html  sample_input_document_as_markdown__durnovo_memo_mindmap__anthropic.txt  sample_input_document_as_markdown__durnovo_memo_mindmap__deepseek.html  sample_input_document_as_markdown__durnovo_memo_mindmap__deepseek.txt  sample_input_document_as_markdown__durnovo_memo_mindmap__gemini.html  sample_input_document_as_markdown__durnovo_memo_mindmap__gemini.txt  sample_input_document_as_markdown__durnovo_memo_mindmap__openai.html  sample_input_document_as_markdown__durnovo_memo_mindmap__openai.txt  sample_input_document_as_markdown__durnovo_memo_mindmap_outline__anthropic.md  sample_input_document_as_markdown__durnovo_memo_mindmap_outline__deepseek.md  sample_input_document_as_markdown__durnovo_memo_mindmap_outline__gemini.md  sample_input_document_as_markdown__durnovo_memo_mindmap_outline__openai.md
